# cytoid-sb

./: .gitignore  Cargo.toml  README.md
crates/cytoid-sb-builder/: Cargo.toml
crates/cytoid-sb-builder/src/: lib.rs
crates/cytoid-sb-cli/: Cargo.toml
crates/cytoid-sb-cli/src/: input.rs  main.rs  pipeline.rs
crates/cytoid-sb-diag/: Cargo.toml
crates/cytoid-sb-diag/src/: lib.rs
crates/cytoid-sb-emit/: Cargo.toml
crates/cytoid-sb-emit/src/: lib.rs
crates/cytoid-sb-lower/: Cargo.toml
crates/cytoid-sb-lower/src/: lib.rs
crates/cytoid-sb-lua/: Cargo.toml
crates/cytoid-sb-lua/src/: controller.rs  host.rs  lib.rs  object.rs  sprite.rs
crates/cytoid-sb-model/: Cargo.toml
crates/cytoid-sb-model/src/: field.rs  lib.rs  summary.rs
crates/cytoid-sb-validate/: Cargo.toml
crates/cytoid-sb-validate/src/: lib.rs
examples/gate_showcase/: README.md  storyboard.lua
examples/hello/: storyboard.json  storyboard.lua  storyboard_controller.lua
examples/kou_ppap/: README.md  storyboard.lua
examples/kyr_bite_your_nails/: README.md  storyboard.lua
examples/levels/: README.md
examples/private/: README.md
tool/: analyze_sb_grouping.py  check-levels.ps1  compare_sb.py  gen_lua_from_sb.py  gen_lua_optimized.py  sync-lab-levels.ps1
