[package]
name = "cytoid-sb-builder"
description = "Storyboard builder API for script frontends"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cytoid-sb-model = { workspace = true }
serde_json = { workspace = true }
