[package]
name = "cytoid-sb-cli"
description = "cytoid-sb — Cytoid storyboard compiler CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "cytoid-sb"
path = "src/main.rs"

[dependencies]
camino = { workspace = true }
clap = { workspace = true }
cytoid-sb-builder = { workspace = true }
cytoid-sb-diag = { workspace = true }
cytoid-sb-emit = { workspace = true }
cytoid-sb-lower = { workspace = true }
cytoid-sb-lua = { workspace = true }
cytoid-sb-model = { workspace = true }
cytoid-sb-validate = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
