[package]
name = "cytoid-sb-diag"
description = "Diagnostics and source spans for cytoid-sb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
miette = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
