[package]
name = "cytoid-sb-emit"
description = "Emit formatted storyboard.generated.json"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
camino = { workspace = true }
cytoid-sb-diag = { workspace = true }
cytoid-sb-model = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
