[package]
name = "cytoid-sb-lua"
description = "Lua authoring host for cytoid-sb (mlua + sb API)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
camino = { workspace = true }
cytoid-sb-builder = { workspace = true }
cytoid-sb-diag = { workspace = true }
cytoid-sb-model = { workspace = true }
mlua = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
