[package]
name = "cytoid-sb-model"
description = "Serde models for Cytoid storyboard JSON"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
