[package]
name = "cytoid-sb-validate"
description = "Semantic validation for Cytoid storyboard documents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cytoid-sb-model = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
cytoid-sb-model = { workspace = true }
